styles.css
body {
    display: flex;
    flex-direction: column;
    font-family: Arial, Helvetica, sans-serif;
    margin: 0px;
}

.header,
.footer,
.icontainer {
    display: flex;
}

.ileft, .iright {
    flex: 1 1 auto;
}

.imiddle {
    flex: 2 1 auto;
    max-width: 1300px;
    padding: 10px 30px;
}

.header .imiddle {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1f2937;
}

.header .ileft, .header .iright {
    background-color: #1f2937;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    margin: 0px;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 20px;
    margin: 0px;
    padding: 0px;
    
}

a {
    text-decoration: none;
    font-size: 18px;
    color: #E5E7EB;
}

.sec-left,
.sec-right {
    flex: 1 1 0;
    
}

.sec-left {
    display: flex;
    flex-direction: column;
}

.sec-left .text {
    margin: 0px;
}

button {
    max-width: 150px;
    background-color: #3882f6;
    border-radius: 7px;
    padding: 3px;
    border: 2px solid #3882f6;
}

.sec1 .imiddle {
    display: flex;
    background-color: #1f2937;
    gap: 20px;
    padding-bottom: 75px;
    padding-top: 75px;
}

.sec1 .ileft, .sec1 .iright {
    background-color: #1f2937;
}

.sec-left .title {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
    margin: 0px;
}

.sec-left .text {
    font-size: 18px;
    color: #E5E7EB;
}

.sec-right {
    background-color: grey;
    display: flex;
    justify-content: center;
    align-items: center;
}

.sec2 .container {
    display: flex;
    text-align: center;
}

.sec2 h3 {
    text-align: center;
}

.image {
    width: 100px;
    height: 100px;
    border: solid #3882f6;
    border-radius: 7px;
}

.images {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.sec3 .imiddle {
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    padding: 80px 30px;
}
.sec3 .ileft, .sec3 .iright {
    background-color: #E5E7EB;
}

.quote {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    color: #1f2937;
    margin: 0px;
}

.sec3 p {
    margin: 0px;
    align-self: flex-end;
    font-weight: bold;
    padding-right: 40px;
}

.box {
    background-color: #3882f6;
    border-radius: 7px;
    display: flex;
    padding: 30px 50px;
    gap: 100px;
}

.box .text {
    color: #F9FAF8;
}

.text .bold {
    font-weight: bolder;
    margin: 0px;
}

.text p {
    margin: 0px;
}

.box .button {
    display: flex;
    align-items: center;
}

.box button {
    border: 2px solid #F9FAF8;
    padding: 2px 20px;
    color: #F9FAF8;
}

.sec4 .imiddle {
    display: flex;
    justify-content: center;
    padding-top: 50px;
    padding-bottom: 50px;
}

.footer {
    background-color: #1f2937;
    justify-content: center;
    color: #F9FAF8;
    font-size: 14px;
    align-items: center;
}

